# api_forecasting_databricks

./: README.md  pyproject.toml
notebooks/bronze/: 02_ingestao_etanol.ipynb  02a_ingestao_historico_etanol.ipynb  02b_ingestao_historico_acucar.ipynb  02c_ingestao_historico_dolar_ptax.ipynb  02d_ingestao_historico_producao_cana_acucar.ipynb  02e_ingestao_anp_historico.ipynb.ipynb  02e_ingestao_historico_anp.ipynb.ipynb  02f_ingestao_historico_comexstat_.ipynb.ipynb  03_ingestao_preco_atual_etanol.ipynb  03a_ingestao_preco_atual_etanol.ipynb  03b_ingestao_preco_atual_acucar.ipynb  03c_ingestao_preco_atual_dolar_ptax.ipynb  03d_ingestao_anp_preco_atual.ipynb.ipynb  03e_ingestao_preco_atual_anp.ipynb.ipynb  03f_ingestao_preco_atual_comexstat.ipynb.ipynb
notebooks/setup/: 01_setup_projeto.ipynb
sql/: 01_create_medallion_schema.sql  02_create_volume.sql
src/features/: data.py  ingestion.py  processing.py  utils.py
