[project]
name = "src"
version = "1.0.0"
description = "\"Projeto de construção de modelo de previsão de preço do Etanol servido por via api e versionado no MLFlow no  Databricks\""
authors = [
    {name = "ederray",email = "eder.ray@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
